{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "15c00ef0-3751-4e7c-a67c-70e7bf0997b0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "db82064a-921d-475b-8a9c-55203babcd94",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Gamepad Aim",
                    "type": "Value",
                    "id": "98a8373c-7fc2-490c-bdb6-854946c52fbd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse Aim",
                    "type": "Value",
                    "id": "e5a8b51b-55e1-47ee-9e3f-0ad7e8eedd8d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "0eb5b13b-d3ef-4600-9823-6f317d095e9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "8c4320a9-8a76-4df3-b6fa-ea395d725be6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shift Weapon Index",
                    "type": "Button",
                    "id": "1d656190-d34d-40ea-bbef-d71570f51342",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Set Weapon Index",
                    "type": "Button",
                    "id": "97e0e7f8-9f03-4942-8033-4afa0114d95c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGameSpeed",
                    "type": "Button",
                    "id": "20df1a2f-2b32-4c09-897a-0084530793bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8925be1d-f253-4c08-9596-4e63f7f0c5a6",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9f12c726-9f7b-4379-8314-4afc41a87baa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "003418c8-e3eb-49ef-b6e7-1517fc06f9c7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3bc9b3bd-a45a-4264-b348-825f3152b963",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f43c8bfb-98b8-4f6e-8a80-a796a03b64df",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "05bf6d4e-daa0-4b8d-8336-ab7faa648c05",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "162e5dcd-8b2e-4bbb-9269-97ee8f390f6d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "Gamepad",
                    "action": "Gamepad Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "956e7207-8926-4cd9-896a-7d0c9816cca2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "475fffba-e0bf-46d5-8bcb-fe76ac626bab",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d5ce6e5-a81c-44e6-9538-6fdfbdabff7d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Mouse Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7477e681-1dac-44d7-a1b4-6a4a4428ba83",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f121a3a-e90f-471d-a701-1a031d4d5faf",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "f0da5050-9e71-4558-87b0-17d24166e45a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift Weapon Index",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4b84ddba-dd76-4d59-82cd-da92746acbf8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Shift Weapon Index",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3c0688f7-0262-4c28-899c-c377c22262b7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Shift Weapon Index",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad Shoulders",
                    "id": "2293fa9e-5920-4ac0-bd62-975214ebee27",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift Weapon Index",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e6020d5a-c486-4a7d-ae07-c4d2e0c5f4cb",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shift Weapon Index",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d925b019-821b-4d1d-9d61-6d5f31503a41",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shift Weapon Index",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b9b5eec1-3418-42e5-a32b-369822ce081c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Clamp",
                    "groups": "Keyboard&Mouse",
                    "action": "Set Weapon Index",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45882550-d331-46f2-a03d-dc263d89a672",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Clamp(min=1,max=1)",
                    "groups": "Keyboard&Mouse",
                    "action": "Set Weapon Index",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3793183-3925-466c-8b17-502497c15ab8",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Clamp(min=2,max=2)",
                    "groups": "Keyboard&Mouse",
                    "action": "Set Weapon Index",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "8bfb7dd4-89f5-453a-bd04-07fdb5d6eb70",
                    "path": "1DAxis(minValue=-0.01,maxValue=0.01)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGameSpeed",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "431a437b-d425-4349-89a9-e685c20e8b34",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeGameSpeed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7235bbe4-1029-4498-9f98-975369951915",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ChangeGameSpeed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "DPad",
                    "id": "29f6c4aa-a348-47f9-8621-5866bd7993a9",
                    "path": "1DAxis(minValue=-0.01,maxValue=0.01)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGameSpeed",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8d5fc8b1-a292-460a-97a0-5d26c0bb7e35",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChangeGameSpeed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "efe80db8-5f61-47b6-9419-24938ec23e47",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ChangeGameSpeed",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}