{
    "name": "GeneralInputs",
    "maps": [
        {
            "name": "Map",
            "id": "7e438d06-a58b-47c7-9945-d4ec63af1d56",
            "actions": [
                {
                    "name": "ToggleFullscreen",
                    "type": "Button",
                    "id": "bbb9ffeb-054c-4449-89c5-2fbe2449ec8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "cfc0a5b3-6249-4654-9aaf-ce23cc95c33c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Ctrl+F",
                    "id": "11ace5f4-f42a-46f8-b981-2a624fbbe8e5",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFullscreen",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6a8c44de-057e-4174-a4d3-9971e1431bcf",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ToggleFullscreen",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "d01fa8a2-9391-42b3-91ce-18ad2512f59f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ToggleFullscreen",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "083dcc63-4eb0-42bb-820a-2c4b4fd38f29",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ToggleFullscreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac795b1d-f2ff-49cc-947c-8b625a41d4ff",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4344a6c1-01eb-4960-b827-f6ddfd1fe4ff",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": []
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": []
        }
    ]
}